two scenes showing alignment of objects fixed axis plane added

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html, body{
 
 .gui-container {
 	position:absolute;
+	z-index: 2;
 }
 
 .data-container{
@@ -16,13 +17,13 @@ html, body{
   left:50%;
   margin-left:-235px;
   margin-top:-182px;
-  z-index:1;
+  z-index:4;
 }
 .submit{
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   position:absolute;
-  z-index:1;
+  z-index:4;
   cursor:pointer;
   padding:10px 20px;
   top:50%; left:50%;
@@ -36,7 +37,7 @@ html, body{
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   position:absolute;
-  z-index:1;
+  z-index:4;
   cursor:pointer;
   padding:10px 20px;
   top:50%; left:50%;
@@ -67,7 +68,7 @@ html, body{
  	opacity: 0;
  	transition: opacity 5s;
  	-webkit-transition: opacity .5s;
-
+ 	z-index:5;
  }
 
 #messages h1 {
@@ -79,4 +80,15 @@ html, body{
 .show {
 	transition: 5.s;
 	opacity: 1;
+}
+
+#rotation-wrap {
+	position: relative;
+	float: right;
+	z-index: 3
+}
+
+#canvas-wrap {
+	position: absolute;
+	z-index: 1;
 }
